...
        android:layout_height="wrap_content"
        android:text="@string/onboard_help_link"
        android:fontFamily="@font/nunitosans_regular"
        android:textColor="@color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/tv_condition_generales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_condition_generales"
        android:layout_width="match_parent"
...
